--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
 <header>
   <h1>Hi, I am a software engineer.</h1>
 
-  <p>Full-stack Rails developer with focus on fronend development.</p>
+  <p>Full-stack Rails developer with focus on frontend development.</p>
 
   <p>
     <img src="images/logo.png" alt="Aleš Rosina">
@@ -54,10 +54,15 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
 
 <section id="about">
   <p>
-    I have been working with web technologies almost all of my professional career. Started in primary school in 1999 with my first website
-    hosted on GeoCities. Fas-forward to today, I was quite some time working with Microsoft stack (C#, ASP.NET, WebForms, ASP.NET MVC, ...)
-    before I switched to <b>Ruby on Rails</b> as my core back-end technology. Nevertheless, I was always in contact with front-end technologies,
-    since my main drive was always nice and clean user interface.
+
+    I have been working with web technologies almost all of my professional career. It all started in primary school, in 1999,
+    when I made my first website hosted on GeoCities. Fast-forward to today, I spent quite some time working with Microsoft
+    stack (C#, ASP.NET, WebForms, ASP.NET MVC, …), before I switched to <b>Ruby on Rails</b> as my core back-end technology.
+    Nevertheless, I was always in contact with front-end technologies, since my main drive was always a nice and clean user interface.
+  </p>
+  <p>
+    I was also active in the local community, organizing <b>Mobile Monday Slovenia</b> events and
+    co-organizing <a href="http://www.tedxljubljana.com" target="_blank">TEDxLjubljana</a> events.
 
   </p>
 </section>
@@ -112,7 +117,7 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
 
 <footer>
 <p>
-  <sup>*</sup> Want to see more how I work? Check out source code of this website or go directly to
+  <sup>*</sup> Want to see how I work? Check out source code of this website or go directly to
   <a href="https://github.com/alesrosina/alesrosina" target="_blank">https://github.com/alesrosina/alesrosina</a>
   where you can find raw source for this website.
 </p>
