--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <meta content="width=device-width, initial-scale=1, user-scalable=0" name="viewport">
   <meta charset='utf-8'>
   <link href="css/main.css" type="text/css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 </head>
 <body>
 
