Added meta tags for description and sharing.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <title>Ales Rosina - software engineer</title>
   <meta content="width=device-width, initial-scale=1, user-scalable=0" name="viewport">
   <meta charset='utf-8'>
+  <meta name="description" content="A full-stack Rails developer with focus on frontend development." />
+  <meta property="og:url" content="http://alesrosina.com" />
+  <meta property="og:type" content="profile" />
+  <meta property="og:title" content="Ales Rosina - software engineer" />
+  <meta property="og:description" content="A full-stack Rails developer with focus on frontend development." />
+  <meta property="og:image" content="http://alesrosina.com/images/logo.png" />
   <link href="css/main.css" type="text/css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
