--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <meta property="og:type" content="profile" />
   <meta property="og:title" content="Ales Rosina - software engineer" />
   <meta property="og:description" content="A full-stack Rails developer with focus on frontend development." />
-  <meta property="og:image" content="http://alesrosina.com/images/logo.png" />
+  <meta property="og:image:url" content="http://alesrosina.com/images/logo_400.png" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="400" />
   <link href="css/main.css" type="text/css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
