--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <meta content="width=device-width, initial-scale=1, user-scalable=0" name="viewport">
   <meta charset='utf-8'>
   <meta name="description" content="A full-stack Rails developer with focus on frontend development." />
+  <link href="css/main.css" type="text/css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+  <!-- Facebook share details -->
   <meta property="og:url" content="http://alesrosina.com" />
   <meta property="og:type" content="profile" />
   <meta property="og:title" content="Ales Rosina - software engineer" />
@@ -30,9 +34,11 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <meta property="og:image:url" content="http://alesrosina.com/images/logo_400.png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
-  <link href="css/main.css" type="text/css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans&subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00BDDE">
 </head>
 <body>
 
