--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <title>Ales Rosina - software engineer</title>
   <meta content="width=device-width, initial-scale=1, user-scalable=0" name="viewport">
   <meta charset='utf-8'>
-  <meta name="description" content="A full-stack Rails developer with focus on frontend development." />
+  <meta name="description" content="A full-stack Rails developer with focus on frontend development."/>
   <link href="css/main.css" type="text/css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <!-- Facebook share details -->
-  <meta property="og:url" content="http://alesrosina.com" />
-  <meta property="og:type" content="profile" />
-  <meta property="og:title" content="Ales Rosina - software engineer" />
-  <meta property="og:description" content="A full-stack Rails developer with focus on frontend development." />
-  <meta property="og:image:url" content="http://alesrosina.com/images/logo_400.png" />
-  <meta property="og:image:width" content="400" />
-  <meta property="og:image:height" content="400" />
+  <meta property="og:url" content="http://alesrosina.com"/>
+  <meta property="og:type" content="profile"/>
+  <meta property="og:title" content="Ales Rosina - software engineer"/>
+  <meta property="og:description" content="A full-stack Rails developer with focus on frontend development."/>
+  <meta property="og:image:url" content="http://alesrosina.com/images/logo_400.png"/>
+  <meta property="og:image:width" content="400"/>
+  <meta property="og:image:height" content="400"/>
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
@@ -46,21 +46,26 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <p>
     <img src="images/logo.png" alt="Aleš Rosina">
   </p>
+
   <h1>Hi, I am a software engineer.</h1>
+
   <h2 class="header-blue">And a full-stack Rails developer with focus on frontend development.</h2>
 </header>
 
 <section id="about">
   <p>
-    I have been working with web technologies almost all of my professional career. It all started in primary school, in
+    My name is <b>Aleš Rosina</b>, currently living and working in <b>Zürich, Switzerland</b>. I have been working with web
+    technologies almost all of my professional career. It all started in primary school, in
     1999, when I made my first website hosted on GeoCities. Fast-forward to today, I spent quite some time working with
     Microsoft stack (C#, ASP.NET, WebForms, ASP.NET MVC, …), before I switched to <b>Ruby on Rails</b> as my core
     back-end technology.
   </p>
+
   <p>
     Nevertheless, I was always in contact with front-end technologies, since my main drive was always a nice and clean
     user interface.
   </p>
+
   <p>
     I was also active in the local community, organizing <b>Mobile Monday Slovenia</b> events and
     co-organizing <a href="http://www.tedxljubljana.com" target="_blank">TEDxLjubljana</a> events.
@@ -71,46 +76,59 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <h2>Skillset <sup>*</sup></h2>
 
   <h3>HTML</h3>
+
   <div class="skill-level-bar skill-level-10"></div>
 
   <h3>CSS (including preprocessors SASS, SCSS, LESS)</h3>
+
   <div class="skill-level-bar skill-level-10"></div>
 
   <h3>Vanilla JavaScript</h3>
+
   <div class="skill-level-bar skill-level-8"></div>
 
   <h3>jQuery</h3>
+
   <div class="skill-level-bar skill-level-9"></div>
 
   <h3>React.js</h3>
+
   <div class="skill-level-bar skill-level-3"></div>
 
   <h3>Node.js</h3>
+
   <div class="skill-level-bar skill-level-6"></div>
 
   <h3>Task Runners (Grunt, Gulp)</h3>
+
   <div class="skill-level-bar skill-level-8"></div>
 
   <h3>Ruby on Rails</h3>
+
   <div class="skill-level-bar skill-level-7"></div>
 
   <h3>Heroku deployment</h3>
+
   <div class="skill-level-bar skill-level-7"></div>
 
   <h3>Git</h3>
+
   <div class="skill-level-bar skill-level-6"></div>
 
   <h3>Git services (GitHub, Bitbucket)</h3>
+
   <div class="skill-level-bar skill-level-7"></div>
 </section>
 
 <section id="contact">
   <h2>Want more? Contact me.</h2>
+
   <p>
     Looking for a long-term dedicated team member or a freelancer?
     <br>
     You can reach me at <a href="mailto:me@alesrosina.com">me@alesrosina.com</a>.
   </p>
+
   <div class="contact-links">
     <a href="https://github.com/alesrosina" target="_blank">
       <img src="images/links_github.png" alt="GitHub">
