--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
 
   <div class="skill-level-bar skill-level-9"></div>
 
-  <h3>React.js</h3>
+  <h3>Angular</h3>
 
   <div class="skill-level-bar skill-level-4"></div>
+
+  <h3>Angular 2</h3>
+
+  <div class="skill-level-bar skill-level-5"></div>
 
   <h3>Node.js</h3>
 
@@ -107,15 +111,19 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
 
   <div class="skill-level-bar skill-level-7"></div>
 
+  <h3>Mobile development with Ionic & Ionic2</h3>
+
+  <div class="skill-level-bar skill-level-5"></div>
+
   <h3>Heroku deployment</h3>
 
-  <div class="skill-level-bar skill-level-7"></div>
+  <div class="skill-level-bar skill-level-8"></div>
 
   <h3>Git</h3>
 
   <div class="skill-level-bar skill-level-7"></div>
 
-  <h3>Git services (GitHub, Bitbucket)</h3>
+  <h3>Git services (GitHub, Bitbucket, GitLab)</h3>
 
   <div class="skill-level-bar skill-level-9"></div>
 </section>
