--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <p>
     My name is <b>Aleš Rosina</b>, currently living and working in <b>Zürich, Switzerland</b>. I have been working with web
     technologies almost all of my professional career. It all started in primary school, in
-    1999, when I made my first website hosted on GeoCities. Fast-forward to today, I spent quite some time working with
-    Microsoft stack (C#, ASP.NET, WebForms, ASP.NET MVC, …), before I switched to <b>Ruby on Rails</b> as my core
+    1999, when I made my first website hosted on GeoCities. Soon I relised HTML & CSS is not enough, so I started
+    exporing Microsoft stack (C#, ASP.NET, WebForms, ASP.NET MVC, …), where I spent a few years. Soon I realise, I
+    want to try out also other stuff, mostly because I switched to MacOS :) Fast forward to today,
+    I spent most of my time working on <b>Ruby on Rails</b> and <b>JavaScript</b> as my perferred technology stack.
+    before I switched to <b>Ruby on Rails</b> as my core
     back-end technology.
   </p>
 
@@ -85,37 +88,29 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
 
   <h3>Vanilla JavaScript</h3>
 
-  <div class="skill-level-bar skill-level-7"></div>
-
-  <h3>jQuery</h3>
-
   <div class="skill-level-bar skill-level-9"></div>
 
   <h3>Angular</h3>
 
   <div class="skill-level-bar skill-level-4"></div>
 
-  <h3>Angular 2</h3>
+  <h3>Angular 2 (& beyond)</h3>
 
-  <div class="skill-level-bar skill-level-5"></div>
+  <div class="skill-level-bar skill-level-6"></div>
 
   <h3>Node.js</h3>
 
   <div class="skill-level-bar skill-level-3"></div>
 
-  <h3>Task Runners (Grunt, Gulp)</h3>
-
-  <div class="skill-level-bar skill-level-8"></div>
-
   <h3>Ruby on Rails</h3>
 
-  <div class="skill-level-bar skill-level-7"></div>
+  <div class="skill-level-bar skill-level-8"></div>
 
   <h3>Mobile development with Ionic & Ionic2</h3>
 
   <div class="skill-level-bar skill-level-5"></div>
 
-  <h3>Heroku deployment</h3>
+  <h3>Continous integration</h3>
 
   <div class="skill-level-bar skill-level-8"></div>
 
