--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
     My name is <b>Aleš Rosina</b>, currently living and working in <b>Zürich, Switzerland</b>. I have been working with web
     technologies almost all of my professional career. It all started in primary school, in
     1999, when I made my first website hosted on GeoCities. Soon I relised HTML & CSS is not enough, so I started
-    exporing Microsoft stack (C#, ASP.NET, WebForms, ASP.NET MVC, …), where I spent a few years. Soon I realise, I
-    want to try out also other stuff, mostly because I switched to MacOS :) Fast forward to today,
+    exploring Microsoft stack (C#, ASP.NET, WebForms, ASP.NET MVC, …), where I spent a few years. Fast forward to today,
     I spent most of my time working on <b>Ruby on Rails</b> and <b>JavaScript</b> as my perferred technology stack.
-    before I switched to <b>Ruby on Rails</b> as my core
-    back-end technology.
   </p>
 
   <p>
@@ -110,7 +107,7 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
 
   <div class="skill-level-bar skill-level-5"></div>
 
-  <h3>Continous integration</h3>
+  <h3>Continous integration (GitLab, Travis)</h3>
 
   <div class="skill-level-bar skill-level-8"></div>
 
