--- a/index.html
+++ b/index.html
@@ -1,57 +1,7 @@
-<!DOCTYPE html>
-<html lang='en'>
-<!--------------------------------------------------------------------------------------------------------------------
-           /$$                                                   /$$
-          | $$                                                  |__/
-  /$$$$$$ | $$  /$$$$$$   /$$$$$$$  /$$$$$$   /$$$$$$   /$$$$$$$ /$$ /$$$$$$$   /$$$$$$       /$$$$$$$  /$$$$$$  /$$$$$$/$$$$
- |____  $$| $$ /$$__  $$ /$$_____/ /$$__  $$ /$$__  $$ /$$_____/| $$| $$__  $$ |____  $$     /$$_____/ /$$__  $$| $$_  $$_  $$
-  /$$$$$$$| $$| $$$$$$$$|  $$$$$$ | $$  \__/| $$  \ $$|  $$$$$$ | $$| $$  \ $$  /$$$$$$$    | $$      | $$  \ $$| $$ \ $$ \ $$
- /$$__  $$| $$| $$_____/ \____  $$| $$      | $$  | $$ \____  $$| $$| $$  | $$ /$$__  $$    | $$      | $$  | $$| $$ | $$ | $$
-|  $$$$$$$| $$|  $$$$$$$ /$$$$$$$/| $$      |  $$$$$$/ /$$$$$$$/| $$| $$  | $$|  $$$$$$$ /$$|  $$$$$$$|  $$$$$$/| $$ | $$ | $$
- \_______/|__/ \_______/|_______/ |__/       \______/ |_______/ |__/|__/  |__/ \_______/|__/ \_______/ \______/ |__/ |__/ |__/
-
-
-Want to see how this page was build? Check out my public repository on GitHub for this website. It is super simple,
-but it showcases use of SASS preprocessor with Grunt task runner for dealing with CSS.
-If you think that this is too much for such a small website, I agree, but it is a showcase for what I (can) do.
-Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
-
---------------------------------------------------------------------------------------------------------------------->
-
-<head>
-  <title>Ales Rosina - software engineer</title>
-  <meta content="width=device-width, initial-scale=1, user-scalable=0" name="viewport">
-  <meta charset='utf-8'>
-  <meta name="description" content="A full-stack Rails developer with focus on frontend development."/>
-  <link href="css/main.css" type="text/css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans&subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-  <!-- Facebook share details -->
-  <meta property="og:url" content="http://alesrosina.com"/>
-  <meta property="og:type" content="profile"/>
-  <meta property="og:title" content="Ales Rosina - software engineer"/>
-  <meta property="og:description" content="A full-stack Rails developer with focus on frontend development."/>
-  <meta property="og:image:url" content="http://alesrosina.com/images/logo_400.png"/>
-  <meta property="og:image:width" content="400"/>
-  <meta property="og:image:height" content="400"/>
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00BDDE">
-</head>
-<body>
-
-<header>
-  <p>
-    <img src="images/logo.png" alt="Aleš Rosina">
-  </p>
-
-  <h1>Hi, I am a software engineer.</h1>
-
-  <h2 class="header-blue">And a full-stack Rails developer with focus on frontend development.</h2>
-</header>
-
+---
+layout: default
+title: ""
+---
 <section id="about">
   <p>
     My name is <b>Aleš Rosina</b>, currently living and working in <b>Zürich, Switzerland</b>. I have been working with web
@@ -70,6 +20,24 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
     I was also active in the local community, organizing <b>Mobile Monday Slovenia</b> events and
     co-organizing <a href="http://www.tedxljubljana.com" target="_blank">TEDxLjubljana</a> events.
   </p>
+</section>
+
+<section id="blog">
+  <h2>Random thoughts</h2>
+
+  <p>
+    This section is an experiment, where I'll try to polish a bit my writing skills. So, expect exactly as what the
+    title is saying - just random thoghts written "on paper".
+  </p>
+
+  <ul>
+    {% for post in site.posts %}
+      <li>
+        <a href="{{ post.url }}">{{ post.title | capitalize }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+
 </section>
 
 <section id="skillset">
@@ -131,26 +99,11 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
 
   <div class="contact-links">
     <a href="https://github.com/alesrosina" target="_blank">
-      <img src="images/links_github.png" alt="GitHub">
-    </a>
-    <a href="https://jsfiddle.net/user/alesrosina/fiddles/" target="_blank">
-      <img src="images/links_jsfiddle.png" alt="JsFiddle">
-    </a>
-    <a href="https://twitter.com/alesrosina" target="_blank">
-      <img src="images/links_twitter.png" alt="Twitter">
+      <img src="assets/images/links_github.png" alt="GitHub">
     </a>
     <a href="https://ch.linkedin.com/in/alesrosina" target="_blank">
-      <img src="images/links_linkedin.png" alt="LinkedIn">
+      <img src="assets/images/links_linkedin.png" alt="LinkedIn">
     </a>
   </div>
 </section>
 
-<footer>
-  <p>
-    <sup>*</sup> Want to see how I work? Check out source code of this website or go directly to
-    <a href="https://github.com/alesrosina/alesrosina" target="_blank">https://github.com/alesrosina/alesrosina</a>
-    where you can find raw source for this website.
-  </p>
-</footer>
-</body>
-</html>
