--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: ""
   <ul>
     {% for post in site.posts %}
       <li>
-        <a href="{{ post.url }}">{{ post.title | capitalize }}</a>
+        <a href="{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
   </ul>
