feat: add mastonon lik

--- a/index.html
+++ b/index.html
@@ -84,11 +84,14 @@ layout: base
     <a href="mailto:me@alesrosina.com?subject=Hi%20from%20alesrosina.com">
       <img src="assets/mail-open-outline.svg" alt="Email">
     </a>
+    <a href="https://ch.linkedin.com/in/alesrosina" target="_blank">
+      <img src="assets/logo-linkedin.svg" alt="LinkedIn">
+    </a>
     <a href="https://github.com/alesrosina" target="_blank">
       <img src="assets/logo-github.svg" alt="GitHub">
     </a>
-    <a href="https://ch.linkedin.com/in/alesrosina" target="_blank">
-      <img src="assets/logo-linkedin.svg" alt="LinkedIn">
+    <a href="https://toot.si/@alesrosina" target="_blank">
+      <img src="assets/logo-mastodon.svg" alt="@alesrosina on Mastodon">
     </a>
   </div>
 </section>
