feat: add mastodon verification

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ layout: base
     <a href="https://github.com/alesrosina" target="_blank">
       <img src="assets/logo-github.svg" alt="GitHub">
     </a>
-    <a href="https://toot.si/@alesrosina" target="_blank">
+    <a href="https://toot.si/@alesrosina" rel="me" target="_blank">
       <img src="assets/logo-mastodon.svg" alt="@alesrosina on Mastodon">
     </a>
   </div>
