chore: move logo to assets folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: base
 ---
 <header>
   <p>
-    <img src="assets/images/logo.png" alt="Aleš Rosina">
+    <img src="assets/logo.png" alt="Aleš Rosina">
   </p>
 
   <h1>Aleš Rosina</h1>
