--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@ layout: base
     title is saying - just random thoghts written "on paper".
   </p>
 
-  <ul>
-    {% for post in site.posts %}
+  <ul class="big-list">
+    {% for post in site.posts limit:5 %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
+      <div>{{ post.date | date: '%A, %e. %B %Y' }}</div>
     </li>
     {% endfor %}
   </ul>
+
+  <a href="/posts.html">See all posts</a>
 
 </section>
 
