--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ layout: base
 
   <p>
     I am trying to polish a bit my writing skills. So, expect exactly as what the
-    title is saying - just random thoghts written "on paper".
+    title is saying - just random thoghts written "on paper" in language I personally
+    feel most sutiable for a given topic.
   </p>
 
   <ul class="big-list">
