--- a/posts.html
+++ b/posts.html
@@ -7,7 +7,7 @@ title: Random thoughts
   {% for post in site.posts %}
   <li>
     <a href="{{ post.url }}">{{ post.title }}</a>
-    <div>{{ post.date | date: '%A, %e. %B %Y' }}</div>
+    <div>{{ post.tag }} {{ post.date | date: '%A, %e. %B %Y' }}</div>
   </li>
   {% endfor %}
 </ul>
